<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Point Gourmand</string>
    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">235810543818684</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb235810543818684</string>
    <string name="slogan">Commandez en ligne et faites-vous livrer à domicile</string>
    <string name="connection">Se connecter</string>
    <string name="inscription">Créer un compte</string>
    <string name="login">Email</string>
    <string name="password">Mot de passe</string>
    <string name="facebook">Se connecter avec facebook</string>
    <string name="google">Se connecter avec google+</string>
    <string name="connect_with">Ou se connecter avec</string>
    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
